--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LdVjZ8rAAAAAMTpN-pXZT9SoR2JHcmCUFNDwv2W"></script>
+
   
   <!-- For SEO Ranking -->
   <script type="application/ld+json">
@@ -156,7 +158,7 @@
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
           <li><a href="/" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b] decoration-[#04813b] underline underline-offset-[0.425rem]">Home</a></li>
-          <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Services</a></li>
+          <li><a href="/services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Services</a></li>
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
@@ -185,7 +187,7 @@
        Desktop Navigation 
       <nav class="hidden md:flex items-center space-x-6 text-sm font-medium text-gray-800">
         <a href="" class="hover:text-[#04813b]">Home</a>
-        <a href="#services" class="hover:text-[#04813b]">Services</a>
+        <a href="/services" class="hover:text-[#04813b]">Services</a>
         <a href="/facilities" class="hover:text-[#04813b]">Facilities</a>
         <a href="#doctors" class="hover:text-[#04813b]">Doctors</a>
         <a href="#about" class="hover:text-[#04813b]">About Us</a>
@@ -210,7 +212,7 @@
    Mobile Dropdown 
   <nav id="mobile-menu" class="hidden flex-col bg-white/95 shadow-md backdrop-blur px-6 py-4 md:hidden">
     <a href="" class="py-2 border-b hover:text-[#04813b] transition">Home</a>
-    <a href="#services" class="py-2 border-b hover:text-[#04813b] transition">Services</a>
+    <a href="/services" class="py-2 border-b hover:text-[#04813b] transition">Services</a>
     <a href="/facilities" class="py-2 border-b hover:text-[#04813b] transition">Facilities</a>
     <a href="#doctors" class="py-2 border-b hover:text-[#04813b] transition">Doctors</a>
     <a href="#about" class="py-2 border-b hover:text-[#04813b] transition">About Us</a>
@@ -709,7 +711,7 @@
     <div class="max-w-7xl mx-auto px-6 md:px-12 text-center">
       <!-- Section Title -->
       <h2 class="text-3xl md:text-4xl font-bold text-gray-800" data-aos="fade-up">
-        Our <span class="text-[#04813b]">Doctors</span>
+        Introducing Our <span class="text-[#04813b]">New Consultants</span>
       </h2>
       <p class="text-gray-600 mt-3 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="100">
         Meet our dedicated team of specialists providing exceptional care.
@@ -1371,7 +1373,7 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
+          <li><a href="/services" class="hover:text-[#04813b] transition">Our Services</a></li>
           <li><a href="/facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
           <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
@@ -1459,6 +1461,7 @@
   const form = document.getElementById('contact-form');
   const thankYouWrapper = document.getElementById('thank-you-wrapper');
   const checkIcon = document.getElementById('check-icon');
+  const SITE_KEY = "6LdVjZ8rAAAAAMTpN-pXZT9SoR2JHcmCUFNDwv2W";
 
   form.addEventListener('submit', async function (e) {
     e.preventDefault();
@@ -1472,34 +1475,40 @@
       return;
     }
 
-    try {
-      const response = await fetch("https://formspree.io/f/xnnzoyqq", {
-        method: "POST",
-        body: formData,
-        headers: {
-          'Accept': 'application/json'
+   // Execute reCAPTCHA v3
+   grecaptcha.ready(function () {
+      grecaptcha.execute(SITE_KEY, { action: 'submit' }).then(async function (token) {
+        const formData = new FormData(form);
+        formData.append('g-recaptcha-response', token); // Append token for Formspree
+
+        try {
+          const response = await fetch("https://formspree.io/f/xnnzoyqq", {
+            method: "POST",
+            body: formData,
+            headers: { 'Accept': 'application/json' }
+          });
+
+          if (response.ok) {
+            form.reset();
+
+            // Show thank you + animate checkmark
+            thankYouWrapper.classList.remove('hidden');
+            checkIcon.classList.remove('opacity-0', 'scale-75');
+            checkIcon.classList.add('opacity-100', 'scale-100');
+
+            setTimeout(() => {
+              checkIcon.classList.add('opacity-0', 'scale-75');
+              checkIcon.classList.remove('opacity-100', 'scale-100');
+              thankYouWrapper.classList.add('hidden');
+            }, 5000);
+          } else {
+            alert("Something went wrong. Please try again later.");
+          }
+        } catch (error) {
+          alert("There was an error submitting the form.");
         }
       });
-
-      if (response.ok) {
-        form.reset();
-
-        // Show thank you + animate checkmark
-        thankYouWrapper.classList.remove('hidden');
-        checkIcon.classList.remove('opacity-0', 'scale-75');
-        checkIcon.classList.add('opacity-100', 'scale-100');
-
-        setTimeout(() => {
-          checkIcon.classList.add('opacity-0', 'scale-75');
-          checkIcon.classList.remove('opacity-100', 'scale-100');
-          thankYouWrapper.classList.add('hidden');
-        }, 5000);
-      } else {
-        alert("Something went wrong. Please try again later.");
-      }
-    } catch (error) {
-      alert("There was an error submitting the form.");
-    }
+    });
   });
 </script>
 
