--- a/src/pages/facilities.html
+++ b/src/pages/facilities.html
@@ -404,11 +404,13 @@
             "../img/facility/or.webp"
           ], descriptions: "X-Ray Department: Diagnostic imaging services." },
           { top: "80%", left: "75%", name: "Laboratory", images: [
-            "../img/facility/lab_1.webp", "../img/facility/lab_2.webp"
-          ], descriptions: "X-Ray Department: Diagnostic imaging services." },
+            "../img/facility/lab_1.webp", 
+            "../img/facility/lab_2.webp"
+          ], descriptions: "These laboratories analyze patient samples like blood, urine, and tissue to help doctors diagnose, treat, and monitor diseases. They are equipped with advanced technology and staffed by skilled professionals who perform a wide range of tests." },
           { top: "65%", left: "92%", name: "ER", images: [
-            "../img/facility/er.webp"
-          ], descriptions: "Laboratory: Blood tests, urinalysis, and more." },
+            "../img/facility/er.webp",
+            "../img/facility/er_2.webp",
+          ], descriptions: "The Emergency Room (ER), also known as the Emergency Department (ED) or Accident and Emergency (A&E), is a critical component of a hospital, providing immediate medical care to patients with urgent or life-threatening conditions. It is the first point of contact for individuals experiencing illnesses or injuries requiring prompt attention, often serving as a vital access point for those in crisis. " },
         ] },
       2: { image: "../img/floor_plan/2.avif", hotspots: [
           { top: "37%", left: "4%", name: "224", images: [
