--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -84,7 +84,7 @@
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
           <li><a href="/" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
-          <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
+          <li><a href="/services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
@@ -155,7 +155,7 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
+          <li><a href="/services" class="hover:text-green-600 transition">Our Services</a></li>
           <li><a href="/facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
