--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
-          <li>
+          <li class="flex flex-wrap gap-4">
+            <a href="https://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Result</a>
             <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -277,9 +278,9 @@
     </p>
 
     <!-- Buttons -->
-    <div class="flex flex-col md:flex-row gap-4 mt-6 items-center lg:items-start">
-      <button class="hover:bg-[#16a94c] bg-[#04813b] text-white px-6 py-3 rounded-md w-full md:w-auto">View Packages</button>
-      <button class="bg-[#16a94c] hover:bg-[#04813b] text-white px-6 py-3 rounded-md w-full md:w-auto">Learn More</button>
+    <div class="flex flex-col justify-center xl:justify-start md:flex-row gap-4 mt-6 items-center lg:items-start">
+      <a href="https://www.labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
+      <a href="/services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Learn more</a>
     </div>
 
     <!-- Left Dotted Pattern -->
@@ -1378,6 +1379,8 @@
           <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
+          <li><a href="https://www.labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
+          <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
 
