--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -88,8 +88,9 @@
           <li><a href="/facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
-          <li>
-            <a href="index.html#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-2">Contact Us</a>
+          <li class="flex flex-wrap gap-4">
+            <a href="https://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Result</a>
+            <a href="index.html#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -160,6 +161,8 @@
           <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="https://www.labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
+          <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
 
