update doctors page

--- a/doctors.html
+++ b/doctors.html
@@ -147,7 +147,7 @@
     </div>
   </nav>
 
-<main class="mt-[10rem] md:mt-[14rem]">
+<main class="mt-[10rem] md:mt-[14rem] mb-24">
  
   <!-- HEADER -->
   <h2 class="text-4xl md:text-6xl font-bold text-gray-800 mb-[5rem] text-center" data-aos="fade-up" data-aos-delay="100">
