update careers page

--- a/careers.html
+++ b/careers.html
@@ -212,7 +212,7 @@
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li class="flex flex-wrap gap-4">
             <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Result</a>
-            <a href="index.html#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
+            <a href="/careers" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Careers</a>
           </li>
         </ul>
       </div>
@@ -226,66 +226,140 @@
         Join our <span class="text-[#04813b]">Team</span>
       </h2>
       <p class="text-gray-600 mt-3 max-w-2xl mx-auto px-4" data-aos="fade-up" data-aos-delay="100">
-        We believe in hiring the best of the best and we want you to join our MVH family!
+        We believe in hiring the best of the best and we want you to join our <span class="font-bold text-lg text-green-600">MVH Family!</span>
       </p>
   </section>
 
   <!-- Careers Listing -->
-  <section class="max-w-6xl mx-auto px-6 py-16">
-    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Job Vacancies</h2>
+  <section class="max-w-6xl mx-auto px-6 py-6 mb-10">
 
     <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+     
       <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-green-700">Registered Nurse</h3>
-        <p class="text-gray-600 mt-2 text-sm">Department: Nursing</p>
-        <p class="text-gray-600 text-sm">Full-Time | Bantay, Ilocos Sur</p>
+        <h3 class="text-xl font-semibold text-green-700">Staff Nurse</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Nursing Service</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Provide patient-centered care and assist doctors in treatment and procedures.
         </p>
-        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
 
-      <!-- Another Job -->
+      <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
-        <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
-        <p class="text-gray-600 text-sm">Full-Time | Bantay, Ilocos Sur</p>
+        <h3 class="text-xl font-semibold text-green-700">Radiologic Technologist</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: X-Ray</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
-          Conduct lab tests accurately and ensure high-quality diagnostic services.
+          Operates imaging equipment to capture diagnostic images for medical evaluation.
         </p>
-        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
 
-      <!-- Another Job -->
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Nursing Aide</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Nursing Service</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>2</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Provide patient-centered care and assist doctors in treatment and procedures.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Internal Auditor</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Finance</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Assesses financial records and controls to ensure compliance and reduce risk.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Pharmacist</h3>
         <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
-        <p class="text-gray-600 text-sm">Full-Time | Bantay, Ilocos Sur</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
         <p class="mt-4 text-gray-700 text-sm">
           Dispense medications, counsel patients, and manage pharmacy operations.
         </p>
-        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
            class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Maintenance Staff</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: General Services</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+            Performs basic repairs and upkeep to keep facilities safe and functional.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Utility Worker</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: General Services</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>1</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Performs basic cleaning and tasks to support facility operations.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
     </div>
   </section>
 
   <!-- Application Instructions -->
-  <section class="bg-green-50 py-12">
+  <section class="pb-20">
     <div class="max-w-4xl mx-auto px-6 text-center">
-      <h2 class="text-2xl font-bold text-gray-800">How to Apply</h2>
+      <h2 class="text-2xl font-bold text-gray-800">How to Apply?</h2>
       <p class="mt-4 text-gray-600">
-        Send your updated resume and cover letter to 
-        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com" class="text-green-700 font-semibold hover:underline">careers@metroviganhospital.com</a>.
+        Please submit your 
+        <span class="text-green-700 font-semibold">Resume, Transcript of Records, Diploma, PRC ID & Application Letter</span>
+         addressed to:
+      </p>
+      <p class=" text-lg uppercase mt-4 text-green-700 font-semibold">
+        Digna R. Ragasa, md, mha, fpcha
+      </p>
+            <p class=" text-md text-green-700 font-semibold">
+        Chief Executive Officer
+      </p>
+            <p class=" text-md text-green-700 font-semibold">
+        Metro Vigan Hospital
+      </p>
+            <p class=" text-md text-green-700 font-semibold">
+        Rizal St., Brgy IV (Poblacion), Bantay, Ilocos Sur
+      </p>
+      <p class="mt-4 text-gray-600">
+        to the <span class="text-green-700 font-semibold">Human Resource Development Office</span>, MVH 4th Floor, Room 401 and look for <span class="text-green-700 font-semibold">Mr. Jaypee Caalim</span> or email us at 
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com" class="text-green-700 font-semibold hover:underline">careers@metroviganhospital.com</a>.
       </p>
       <p class="mt-2 text-gray-600">
         For inquiries, contact our HR Department at 
@@ -346,8 +420,8 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
   </svg>
   <span>
-    <a href="tel:+631234567890" class="hover:underline hover:underline-offset-2">
-      +63 (123) 456-7890
+    <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
+      (077) 674 0587
     </a>
   </span>
 </li>
