--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,121 @@
     </div>
   </section>
 
+<!-- NEWS & UPDATES -->
+<section id="news" class="py-16 bg-gray-50">
+  <div class="max-w-7xl mx-auto px-4">
+    <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
+      <span class="text-green-800">News</span> & <span class="text-green-800">Updates</span>
+    </h2>
+    <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
+  Stay informed with the latest news, announcements, and updates from our hospital.  
+  From new medical services and health tips to upcoming events, we keep you connected to what's happening in our community.
+</p>
+
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- News Card -->
+      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
+        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">
+        <div class="p-6">
+          <h3 class="text-lg font-semibold mb-2">Diamond Status Award</h3>
+          <p class="text-gray-600 text-sm mb-4">
+            Metro Vigan Hospital has been awarded the Diamond Status Award for Excellence in Stroke Patient Care.
+          </p>
+          <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+        </div>
+      </div>
+
+      <!-- News Card -->
+      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">        <div class="p-6">
+          <h3 class="text-lg font-semibold mb-2">Pre-anniversary Celebration</h3>
+          <p class="text-gray-600 text-sm mb-4">
+            Join our special screening event from August 15-20, offering free glucose testing and consultations.
+          </p>
+          <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+        </div>
+      </div>
+
+      <!-- News Card -->
+      <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
+        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">        <div class="p-6">
+          <h3 class="text-lg font-semibold mb-2">Pre-anniversary Celebration</h3>
+          <p class="text-gray-600 text-sm mb-4">
+            Join our special screening event from August 15-20, offering free glucose testing and consultations.
+          </p>
+          <a href="#" class="text-green-600 font-medium hover:underline">Read more →</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- WE ARE HIRING -->
+<section id="careers" class="py-16 bg-white">
+  <div class="max-w-7xl mx-auto px-4">
+    <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-10" data-aos="fade-up">
+      We Are <span class="text-green-800">Hiring</span>
+    </h2>
+    <p class="text-center text-gray-600 max-w-2xl mx-auto mb-12" data-aos="fade-up" data-aos-delay="100">
+      Join our dedicated healthcare team and make a difference in the community.  
+      We are currently looking for passionate and skilled individuals for the following positions:
+    </p>
+
+    <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3" data-aos="fade-up" data-aos-delay="300">
+      <!-- Job Card -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Registered Nurse</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Nursing</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Provide patient-centered care and assist doctors in treatment and procedures.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Another Job -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Medical Technologist</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Laboratory</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Conduct lab tests accurately and ensure high-quality diagnostic services.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+
+      <!-- Another Job -->
+      <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-green-700">Pharmacist</h3>
+        <p class="text-gray-600 mt-2 text-sm">Department: Pharmacy</p>
+        <p class="text-gray-600 text-sm mb-4">Openings: <strong>3</strong></p>
+        <p class="mt-4 text-gray-700 text-sm">
+          Dispense medications, counsel patients, and manage pharmacy operations.
+        </p>
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresource@metroviganhospital.com"
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
+          Apply Now
+        </a>
+      </div>
+    </div>
+
+    <!-- More Jobs Button -->
+    <div class="mt-12 text-center" data-aos="fade-up" data-aos-delay="400">
+      <a href="/careers" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition">
+        Looking for more job openings?
+      </a>
+    </div>
+  </div>
+</section>
+
+
   <!-- ABOUT US SECTION -->
 <section id="about-us" class="py-16 bg-white">
   <div class="max-w-7xl mx-auto px-6 md:px-12">
@@ -1191,7 +1306,7 @@
         <div class="rounded-xl overflow-hidden shadow-lg border border-gray-200">
           <iframe 
             src="https://www.google.com/maps?q=Rizal+St.,+Brgy.+IV+(Poblacion),+Bantay,+Philippines&output=embed"
-            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" title="MVH Address">
+            width="100%" height="400" style="border:0;" allowfullscreen="yes" loading="lazy" title="MVH Address">
           </iframe>
         </div>
       </div>
@@ -1404,8 +1519,8 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
   </svg>
   <span>
-    <a href="tel:+631234567890" class="hover:underline hover:underline-offset-2">
-      +63 (123) 456-7890
+    <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
+      (077) 674 0587
     </a>
   </span>
 </li>
