--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -317,8 +317,8 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
   </svg>
   <span>
-    <a href="tel:+631234567890" class="hover:underline hover:underline-offset-2">
-      +63 (123) 456-7890
+    <a href="tel:(077) 674 0587" class="hover:underline hover:underline-offset-2">
+      (077) 674 0587
     </a>
   </span>
 </li>
