update news section

--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
     <div class="grid md:grid-cols-3 gap-8">
       <!-- News Card -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
-        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">
+        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
         <div class="p-6">
           <h3 class="text-lg font-semibold mb-2">Diamond Status Award</h3>
           <p class="text-gray-600 text-sm mb-4">
@@ -1090,7 +1090,8 @@
 
       <!-- News Card -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">        <div class="p-6">
+        <img src="src/img/hero/IMG_9508.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
+        <div class="p-6">
           <h3 class="text-lg font-semibold mb-2">Pre-anniversary Celebration</h3>
           <p class="text-gray-600 text-sm mb-4">
             Join our special screening event from August 15-20, offering free glucose testing and consultations.
@@ -1101,7 +1102,8 @@
 
       <!-- News Card -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="200">
-        <img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t39.30808-6/529945446_24627951366796457_9149037812080472395_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lERbOnacxCwQ7kNvwEm3220&_nc_oc=AdmLTuh6fpFMSICi9DAbEK8AlZSRffXhUQfdOkgyDfFQYoiC5LbA8W1XqloGUCdQWVvqhoU3R2G8Q_e5kIYsAHOj&_nc_zt=23&_nc_ht=scontent-tpe1-1.xx&_nc_gid=fNkq3UdSngPGdHXKcWFtvg&oh=00_AfUwa1_wzSD5aKWBXYRLkHTKbdZ5ruDn1Lnxzt_NqNH28Q&oe=689D25FC" alt="News 1" class="w-full h-56 object-cover">        <div class="p-6">
+        <img src="src/img/hero/IMG_9508.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">        
+        <div class="p-6">
           <h3 class="text-lg font-semibold mb-2">Pre-anniversary Celebration</h3>
           <p class="text-gray-600 text-sm mb-4">
             Join our special screening event from August 15-20, offering free glucose testing and consultations.
