update about-us page

--- a/about-us.html
+++ b/about-us.html
@@ -138,7 +138,7 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Result</a>
+            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="index.html#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -331,7 +331,7 @@
       <p class="text-gray-600 text-sm">Head - Laboratory</p>
     </div>
     <div class="p-6 bg-white rounded-lg shadow hover:shadow-md transition">
-      <h3 class="font-bold text-lg text-gray-800">Anthony Vera Cruz, MD</h3>
+      <h3 class="font-bold text-lg text-gray-800">Bernadette Fragante-Bato, MD</h3>
       <p class="text-gray-600 text-sm">Head - Radiology & Imaging</p>
     </div>
     <div class="p-6 bg-white rounded-lg shadow hover:shadow-md transition">
