--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Result</a>
+            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
