replaced JPG/WEBP to AVIF

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
       <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
         <!-- Facility 1 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="200">
-          <img src="src/img/facility/er.webp" fetchpriority="low" loading="lazy" alt="Emergency Room" class="w-full h-48 object-cover">
+          <img src="src/img/facility/er_1.avif" fetchpriority="low" loading="lazy" alt="Emergency Room" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Emergency Room</h3>
             <p class="text-gray-600 text-sm mt-2">24/7 emergency services with advanced life support equipment.</p>
@@ -661,16 +661,16 @@
 
         <!-- Facility 2 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="250">
-          <img src="src/img/facility/or.webp" alt="Operating Theater" class="w-full h-48 object-cover">
+          <img src="src/img/facility/or.avif" alt="Operating Theater" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
-            <h3 class="text-xl font-semibold text-gray-800">Operating Theater</h3>
+            <h3 class="text-xl font-semibold text-gray-800">Operating Room</h3>
             <p class="text-gray-600 text-sm mt-2">Fully equipped surgical suites with sterile and modern technology.</p>
           </div>
         </div>
 
         <!-- Facility 3 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="300">
-          <img src="src/img/facility/lab_1.webp" alt="Laboratory" class="w-full h-48 object-cover">
+          <img src="src/img/facility/lab_1.avif" alt="Laboratory" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Diagnostic Laboratory</h3>
             <p class="text-gray-600 text-sm mt-2">Comprehensive lab tests with fast and accurate results.</p>
@@ -679,7 +679,7 @@
 
         <!-- Facility 4 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="350">
-          <img src="src/img/facility/icu.webp" alt="ICU" class="w-full h-48 object-cover">
+          <img src="src/img/facility/icu.avif" alt="ICU" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Intensive Care Unit (ICU)</h3>
             <p class="text-gray-600 text-sm mt-2">Critical care units with round-the-clock monitoring and specialists.</p>
@@ -688,7 +688,7 @@
 
         <!-- Facility 5 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="400">
-          <img src="src/img/facility/er_2.webp" alt="Pharmacy" class="w-full h-48 object-cover">
+          <img src="src/img/facility/pharmacy.avif" alt="Pharmacy" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Pharmacy</h3>
             <p class="text-gray-600 text-sm mt-2">In-house pharmacy providing a wide range of medicines and supplies.</p>
@@ -697,7 +697,7 @@
 
         <!-- Facility 6 -->
         <div class="bg-white shadow-md rounded-xl overflow-hidden hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="450">
-          <img src="src/img/facility/small_private.webp" alt="Private Rooms" class="w-full h-48 object-cover">
+          <img src="src/img/facility/small_private.avif" alt="Private Rooms" class="w-full h-48 object-cover">
           <div class="p-6 text-center">
             <h3 class="text-xl font-semibold text-gray-800">Private Rooms</h3>
             <p class="text-gray-600 text-sm mt-2">Comfortable private rooms for patients and their families.</p>
