--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Title & Description -->
-  <title>Facilities | Metro Vigan Hospital</title>
+  <title>Services | Metro Vigan Hospital</title>
 
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
@@ -172,10 +172,10 @@
     <picture>
       <!-- Mobile -->
       <source srcset="src/img/hero/IMG_9508.avif" media="(max-width: 768px)" type="image/avif">
-      <source srcset="src/img/hero/services-hero-mobile.jpg" media="(max-width: 768px)" type="image/jpeg">
+      <source srcset="src/img/hero/services-hero-mobile.avif" media="(max-width: 768px)" type="image/jpeg">
       <!-- Desktop -->
       <source srcset="src/img/hero/IMG_9508.avif" type="image/avif">
-      <source srcset="src/img/hero/services-hero-desktop.jpg" type="image/jpeg">
+      <source srcset="src/img/hero/services-hero-desktop.avif" type="image/jpeg">
       <!-- Fallback -->
       <img src="src/img/hero/IMG_9508.avif" alt="Metro Vigan Hospital Services" 
            class="w-full h-full object-cover">
