--- a/facilities.html
+++ b/facilities.html
@@ -350,6 +350,10 @@
           ], descriptions: [
             "Pharmacy: Dispensing medications and health products."
             ] },
+          { top: "64%", left: "65.5%", name: "Ultrasound", images: [
+            "src/img/facility/ultrasound_2.avif",
+            "src/img/facility/ultrasound_1.avif",
+          ], descriptions: "Ultrasound Department: Diagnostic imaging services." },
           { top: "47%", left: "78%", name: "X-Ray", images: [
             "src/img/facility/xray_1.avif",
             "src/img/facility/xray_2.avif",
@@ -425,7 +429,7 @@
           ], descriptions: "SERVER!!!!!." },
 
           { top: "44%", left: "62%", name: "Lithotripsy", images: [
-            "src/img/facility/lithotripsy.avif",
+            "src/img/facility/lithotripsy.avif"
           ], descriptions: [
             "Ilocos Kidney Stone Center",
             ] },
@@ -502,7 +506,7 @@
             ] },
             { top: "53%", left: "50.3%", name: "Nurse Station 2", images: [
             "src/img/facility/ns2.avif",
-            "src/img/facility/ns_2.avif",
+            "src/img/facility/ns2_2.avif",
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
@@ -514,8 +518,8 @@
             "Room Rate: Php2000.00/Day"
             ] },
             { top: "77%", left: "10%", name: "Heart Station", images: [
-            "src/img/facility/heartstation-1.avif",
-            "src/img/facility/heartstation-2.avif",
+            "src/img/facility/heart_station-1.avif",
+            "src/img/facility/heart_station-2.avif",
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
