--- a/facilities.html
+++ b/facilities.html
@@ -350,6 +350,11 @@
           ], descriptions: [
             "Pharmacy: Dispensing medications and health products."
             ] },
+            { top: "77%", left: "23%", name: "CT-Scan", images: [
+            "src/img/facility/ct-scan.avif"
+          ], descriptions: [
+            "CT-Scan Department: Advanced imaging services for detailed internal views."
+            ] },
           { top: "64%", left: "65.5%", name: "Ultrasound", images: [
             "src/img/facility/ultrasound_2.avif",
             "src/img/facility/ultrasound_1.avif",
@@ -718,23 +723,17 @@
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-            { top: "53%", left: "50.3%", name: "Nurse Station 2", images: [
-            "src/img/facility/or.avif"
+            { top: "61%", left: "51%", name: "Nurse Station 3", images: [
+            "src/img/facility/ns3.avif"
           ], descriptions: [
             "Room Details: Regular Private",
             "Room Rate: Php2000.00/Day"
             ] },
-            { top: "63%", left: "51%", name: "Nursing Service Office", images: [
-            "src/img/facility/or.avif"
+            { top: "77%", left: "10%", name: "Presidential", images: [
+            "src/img/facility/presidential.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
-            ] },
-            { top: "77%", left: "10%", name: "Heart Station", images: [
-            "src/img/facility/or.avif"
-          ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Presidential Room",
+            "Room Rate: Php4000.00/Day"
             ] },
             { top: "77%", left: "23%", name: "Phaeco Room 227", images: [
             "src/img/facility/or.avif"
